@@ -54,7 +54,6 @@ namespace scheme {
     Object vectorPEx(int argc, const Object* argv);
     Object eqPEx(int argc, const Object* argv);
     Object eqvPEx(int argc, const Object* argv);
-    Object memberEx(int argc, const Object* argv);
     Object booleanPEx(int argc, const Object* argv);
     Object symbolTostringEx(int argc, const Object* argv);
 
