@@ -2,6 +2,7 @@ MOSH=../mosh
 
 test:
 	$(MOSH) -b tests/r6rs/run/mutable-strings.sps
+	$(MOSH) -b tests/r6rs/run/mutable-pairs.sps
 	$(MOSH) -b tests/r6rs/run/contrib.sps
 	$(MOSH) -b tests/r6rs/run/programs.sps
 	$(MOSH) -b tests/r6rs/run/control.sps
